# auto-trading-bot

./: .pre-commit-config.yaml  .ruff.toml  docker-compose.yaml  pyproject.toml  pytest.ini
config/: config.yaml  database.yaml  exchanges.yaml  trading_bot.yaml
docs/stratigies/: DOUBLE_BOLLINGER_BANDS.md  DOUBLE_RSI.md  ON_BALANCE_VOLUME.md  RSI_MACD.md  STOCHASTIC_MACD.md  TRIPLE_MACD.md
scripts/: init.sql
src/: main.py
src/config/: __init__.py  config_core.py  config_manager.py  file_watcher.py
src/database/: cache.py  storage.py
src/decision/: __init__.py  confluence_checker.py  decision_engine.py  position_sizer.py  signal_aggregator.py
src/decision/codes/: __init__.py  decision_status.py
src/decision/models/: __init__.py  decision.py  trade_candidate.py
src/math/: __init__.py  indicators_lib.py
src/montioring/: __init__.py  ignore_filter.py  logger.py
src/risk/: __init__.py  risk_engine.py  risk_rule.py
src/strategies/: __init__.py  base_strategy.py  regime_detector.py
src/trading/: application.py
src/utils/: __init__.py  helpers.py
test/: conftest.py  test_application.py  test_base_strategy.py  test_cache.py  test_candle.py  test_config_core.py  test_config_manager.py  test_confluence_checker.py  test_decision_engine.py  test_errors.py  test_executor.py  test_file_watcher.py  test_helpers.py  test_order.py  test_position_sizer.py  test_regime_detector.py  test_risk_context.py  test_risk_engine.py  test_risk_record.py  test_risk_rule.py  test_signal_aggregator.py  test_storage.py  test_ticker.py  test_trading_engine.py
(+49 files in other folders)
